2005-03-31  John Dennis  <jdennis@redhat.com>

	* lib/Makefile.am
	* lib/mozilla_bookmarks.py
	* lib/sources/mozillasource.py

	Initial "glue" to wed together mozilla_bookmarks and mozillasource.
	Mozillasource now monitors and creates a bookmark object.
	Remove obsolete ununsed code
	Clean up home_dir initialization
	mozilla_bookmarks now python stand alone for testing, not sh standalone
	
2005-03-30  John Dennis  <jdennis@redhat.com>

	* lib/mozilla_bookmarks.py: Add new python file for mozilla
	bookmarks. Not complete yet, it can parse DOCTYPE
	NETSCAPE-Bookmark-file-1 format file, build a data structure of
	folder trees, bookmarks, and all attributes. Folders and bookmarks
	can be searched for.

	ToDo: Generate the difference between two book mark files, this
	will use the same difference generator code currently in
	mozillasource. Merge one bookmark file into another. Integrate
	into monitor and apply. Filter attributes during apply that should
	not be merged (e.g. timestamps)

Sat Mar 26 17:37:45 CET 2005 Daniel Veillard <veillard@redhat.com>

	* configure.ac: applied patch from Joshua Hoblitt to add Gentoo support

2005-03-24  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: post-release bump to 0.18.

==================== 0.17 ====================

2005-03-24  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: Version 0.17.
	
2005-03-24  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: add --with-prototype-user=<username>,
	defaults to "sabayon"
	
	* lib/Makefile.am, lib/config.py.in: set PROTOTYPE_USER
	to whatever was passed to configure.
	
	* sabayon.spec.in: use --with-prototype-user.
	
	* doc/site.xsl: add link to Fedora Extras repository.
	
	* doc/*.html: rebuild.

2005-03-23  John Dennis  <jdennis@redhat.com>

	* lib/userprofile.py: add start_monitoring and stop_monitoring to
	the Delegate class, and invoke them.

	* lib/paneldelegate.py: add start_monitoring and stop_monitoring
	stub routines
	